change contact us & warranty meta info; update mageworx extension.

--- a/app/code/MageWorx/SearchSuiteAutocomplete/i18n/en_US.csv
+++ b/app/code/MageWorx/SearchSuiteAutocomplete/i18n/en_US.csv
@@ -9,6 +9,7 @@ Description,Description
 Price,Price
 "Add to Cart Button","Add to Cart Button"
 "See All","See All"
+"Add to Cart","Add to Cart"
 "No Result","No Result"
 SearchSuite,SearchSuite
 "Autocomplete Configuration","Autocomplete Configuration"
